--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-home></app-home>
+<app-header></app-header>
+<app-navigation></app-navigation>
 
-<app-pie-list></app-pie-list>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
