--- a/src/app/components/pies/pie-list/pie-list.component.html
+++ b/src/app/components/pies/pie-list/pie-list.component.html
@@ -1,5 +1,3 @@
-<p *ngIf="pieService.isLoading">Loading....</p>
-
 <div
   class="max-w-2xl container mx-auto pt-5" 
   appearance="fill"
@@ -13,8 +11,10 @@
   >
 </div>
 
+<p *ngIf="pieService.isLoading">Loading....</p>
+
 <div 
-  class="content-center mx-auto"
+  class="grid grid-cols-2 content-center mx-auto"
   *ngIf="pieService.pies as pies; else noPies"
 >
   <app-pie-details
@@ -27,6 +27,11 @@
   <p>No pies...</p>
 </ng-template>
 
-<app-modal-form title="Create new pie">
+<app-modal-form *ngIf="isDisplayModal" title="Create new pie">
   <app-create-pie></app-create-pie>
 </app-modal-form>
+
+<button
+  class="rounded-full bg-red-700 text-white fixed right-5 bottom-5 py-2 px-4"
+  (click)="displayModal()"
+>+</button>
