--- a/src/app/shared/modal-form/modal-form.component.html
+++ b/src/app/shared/modal-form/modal-form.component.html
@@ -1,4 +1,7 @@
-<div class="bg-black/50 fixed top-8 right-0 left-0 bottom-0"></div>
+<div 
+  class="bg-black/50 fixed top-8 right-0 left-0 bottom-0"
+  (click)="close()"
+></div>
 
 <div
   class="w-[500px] absolute top-16 rounded p-6 bg-white left-1/2 -translate-x-1/2"
