--- a/src/app/core/navigation/navigation.component.html
+++ b/src/app/core/navigation/navigation.component.html
@@ -1,17 +1,18 @@
-<div
-  class="menu menu--sticky"
-  color="default"
->
-  <a class="menu__logo logo" routerLink="/">
-    <img class="logo__image" [src]="companyLogo" alt="logo">
-  </a>
+<div class="menu menu--sticky">
+  <div class="container">
+    <div class="menu__row">
+      <a class="menu__icon icon" routerLink="/">
+        <img class="icon__img" [src]="companyLogo" alt="logo">
+      </a>
 
-  <span class="menu__row">
-    <a routerLink="pies" class="menu__link">Торты</a>
-    <a routerLink="" class="menu__link">Пироги</a>
-    <a routerLink="" class="menu__link">Капкейки</a>
-    <a routerLink="" class="menu__link">Зефир</a>
-    <a routerLink="" class="menu__link">Мармелад</a>
-    <a routerLink="" class="menu__link">Ещё..</a>
-  </span>
+      <span class="menu__body">
+        <a routerLink="pies" class="menu__link">Торты</a>
+        <a routerLink="" class="menu__link">Пироги</a>
+        <a routerLink="" class="menu__link">Капкейки</a>
+        <a routerLink="" class="menu__link">Зефир</a>
+        <a routerLink="" class="menu__link">Мармелад</a>
+        <a routerLink="" class="menu__link">Ещё..</a>
+      </span>
+    </div>
+  </div>
 </div>
