--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,23 +1,27 @@
-<div class="header">
-  <div class="header__item">
-    <div class="header__menu-links menu-links">
-      <a href="">О нас</a> |
-      <a href="">Доставка</a> |
-      <a href="">Оплата</a>
+<header class="header">
+  <div class="container">
+    <div class="header__row">
+      <div class="header__item">
+        <div class="header__menu-links menu-links">
+          <a href="">О нас</a> |
+          <a href="">Доставка</a> |
+          <a href="">Оплата</a>
+        </div>
+      </div>
+
+      <div class="header__item">
+        <a href="">Вакансии в пекарне «Крама Алёны»</a>
+      </div>
+
+      <div class="header__item">
+        <div class="header__social-links social-links">
+          <a href="">Контакты</a>
+          <a href="">Facebook</a>
+          <a href="">Вконтакте</a>
+          <a href="">Инстаграм</a>
+          <a href="">Аккаунт</a>
+        </div>
+      </div>
     </div>
   </div>
-
-  <div class="header__item">
-    <a href="">Вакансии в пекарне «Крама Алёны»</a>
-  </div>
-
-  <div class="header__item">
-    <div class="header__social-links social-links">
-      <a href="">Контакты</a>
-      <a href="">Facebook</a>
-      <a href="">Вконтакте</a>
-      <a href="">Инстаграм</a>
-      <a href="">Аккаунт</a>
-    </div>
-  </div>
-</div>
+</header>
