--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -24,3 +24,15 @@
         }
     }
 }
+
+.header__menu-links{
+    @media (max-width:992px) {
+        display: none;
+    }
+}
+
+.header__social-links {
+    @media (max-width:992px) {
+        display: none;
+    }
+}
