--- a/src/app/core/navigation/navigation.component.scss
+++ b/src/app/core/navigation/navigation.component.scss
@@ -27,7 +27,7 @@
 
         &:hover {
             color: orange;
-            border-bottom: 3px solid orange; ;
+            border-bottom: 3px solid orange;
         }
     }
 
