--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@ body { margin: 0; font-family: IBM Plex Sans; font-weight: 400; }
 
 .container {
     max-width: 1200px;
-    margin: 0px auto;
+    margin: 0px auto; // centering
     padding: 0px 15px;
 }
 @media (max-width:1200px) {
