use icons instead of text in the header

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -15,11 +15,29 @@
 
       <div class="header__item">
         <div class="header__social-links social-links">
-          <a href="">Контакты</a>
-          <a href="">Facebook</a>
-          <a href="">Вконтакте</a>
-          <a href="">Инстаграм</a>
-          <a href="">Аккаунт</a>
+          <a class="social-links__link" href="">Контакты</a>
+          <a class="social-links__link" href="">
+            <img 
+              class="social-links__image" 
+              src="/assets/icons/facebook.svg" 
+              alt="facebook"
+            >
+          </a>
+          <a class="social-links__link" href="">
+            <img 
+              class="social-links__image" 
+              src="/assets/icons/ok.svg" 
+              alt="ok"
+            >
+          </a>
+          <a class="social-links__link" href="">
+            <img 
+              class="social-links__image" 
+              src="/assets/icons/instagram.svg" 
+              alt="instagram"
+            >
+          </a>
+          <a class="social-links__link" href="">Аккаунт</a>
         </div>
       </div>
     </div>
