add pie view page

--- a/src/app/components/pies/pie-details/pie-details.component.html
+++ b/src/app/components/pies/pie-details/pie-details.component.html
@@ -16,7 +16,7 @@
 
     <button 
       class="product-details__order-button"
-      (click)="open()"
+      (click)="openProductView()"
     >ЗАКАЗАТЬ</button>
   </div>
 </div> 
