--- a/src/app/components/pies/create-pie/create-pie.component.html
+++ b/src/app/components/pies/create-pie/create-pie.component.html
@@ -1,54 +1,60 @@
-<form [formGroup]="form" (ngSubmit)="submit()">
+<form 
+  class="form" 
+  [formGroup]="form" 
+  (ngSubmit)="submit()"
+>
   <input 
     type="text"
-    class="border w-full py-2 px-4 mb-2"
-    placeholder="Pie name"
+    class="form__input"
+    placeholder="Название торта"
     formControlName="title"
   >
 
-  <p
-    class="text-red-600 text-tigh px-2"
-    *ngIf="title.errors && title.touched"
-  >Pie title is invalid</p>
+  <div *ngIf="title.touched && title.invalid">
+    <p class="error-message" *ngIf="title.errors!['required']">Пожалуйста, введите название торта</p>
+    <p class="error-message" *ngIf="title.errors!['minLength']">Наименование торта слишком коротное</p>
+  </div>
 
-  <input 
+  <textarea 
     type="text"
-    class="border w-full py-2 px-4 mb-2"
-    placeholder="Description"
+    class="form__input"
+    placeholder="Описание"
     formControlName="description"
-  >
+  ></textarea>
 
-  <p
-    class="text-red-600 text-tigh px-2"
-    *ngIf="description.errors && description.touched"
-  >Pie description is invalid</p>
+  <div *ngIf="description.touched && description.invalid">
+    <p class="error-message" *ngIf="description.errors!['required']">Пожалуйста, введите описание для торта</p>
+    <p class="error-message" *ngIf="description.errors!['minLength']">Описание для торта слишком короткое</p>
+    <p class="error-message" *ngIf="description.errors!['maxLength']">Описание для торта слишком длинное</p>
+  </div>
 
   <input
     type="number"
-    class="border w-full py-2 px-4 mb-2"
-    placeholder="Price"
+    class="form__input"
+    placeholder="Цена"
     formControlName="price"
   >
 
-  <p
-    class="text-red-600 text-tigh px-2"
-    *ngIf="price.errors && price.touched"
-  ></p>
+  <div *ngIf="price.touched && price.invalid">
+    <p class="error-message" *ngIf="price.errors!['required']">Пожалуйста, введите цену для торта</p>
+    <p class="error-message" *ngIf="price.errors!['min']">Цена не может меньше или равна 0</p>
+    <p class="error-message" *ngIf="price.errors!['max']">Цена слишком большая</p>
+  </div>
 
   <input 
-    type="image"
-    class="border w-full py-2 px-4 mb-2"
-    placeholder="Image"
+    type="time"
+    class="form__input"
+    placeholder="Картинка"
     formControlName="imageUrl"
   >
 
-  <p
-    class="text-red-600 text-tigh px-2"
-    *ngIf="imageUrl.errors && imageUrl.touched"
-  ></p>
+  <div *ngIf="imageUrl.touched && imageUrl.invalid">
+    <p class="error-message" *ngIf="price.errors!['required']">Пожалуйста, добавьте картинку</p>
+  </div>
 
   <button
     type="submit"
-    class="py-2 px-6 mt-2 bg-blue-600 text-white"
-  >Create</button>
+    class="form__button"
+    [disabled]="!form.valid"
+  >Добавить</button>
 </form>
