--- a/src/app/components/pies/pie-list/pie-list.component.html
+++ b/src/app/components/pies/pie-list/pie-list.component.html
@@ -3,7 +3,7 @@
     <div class="controls__title">ТОРТЫ</div>
     <div class="controls__search">
       <input 
-        type="text"
+        type="search"
         class=""
         placeholder="Введите текст поиска..."
         [(ngModel)]="term"
@@ -37,9 +37,9 @@
   <p>Нет товаров!</p>
 </ng-template>
 
-<app-modal-form *ngIf="isDisplayModal" title="Create new pie">
+<app-popup *ngIf="isDisplayModal" title="Добавить продукт">
   <app-create-pie></app-create-pie>
-</app-modal-form>
+</app-popup>
 
 <button
   class="rounded-full bg-red-700 text-white fixed right-5 bottom-5 py-2 px-4"
