--- a/src/app/components/pies/pie-details/pie-details.component.scss
+++ b/src/app/components/pies/pie-details/pie-details.component.scss
@@ -1,5 +1,5 @@
-$light_orange: #fbc88c;
-$bacis_color: white;
+@import 'abstracts/variables';
+@import 'components/buttons';
 
 .product-item {
     font-size: 1.25rem;
@@ -52,21 +52,7 @@ $bacis_color: white;
     }
 
     &__order-button { 
-        padding: 0.75rem 1.15rem;
-        font-size: .85rem;
-        cursor: pointer;
-        color: $light_orange;
-        background: transparent;
-        border: 1px solid $light_orange;
-        outline: none;
-        transition: 0.3s ease-in-out;
-
-        &:hover {
-            background: none;
-            background-color: $light_orange;
-            color: $bacis_color;
-            box-shadow: 0 12px 28px rgba(111, 111, 111, 0.25);
-        }
+        @extend %deault-button;
     }
 }
 
