--- a/src/app/components/pies/pie-view/pie-view.component.html
+++ b/src/app/components/pies/pie-view/pie-view.component.html
@@ -35,7 +35,7 @@
         </div>
         <button 
           type="button" 
-          class="pie-view__order-btn"
+          class="pie-view__order-button"
           (click)="orderPie()"
         >ЗАКАЗАТЬ ТОВАР</button>
       </form>
