--- a/src/app/scss/abstracts/_variables.scss
+++ b/src/app/scss/abstracts/_variables.scss
@@ -1,3 +1,6 @@
 $light-orange: #fbc88c !default;
 
 $bacis-white: white !default;
+
+$light-gray: rgb(245, 246, 246) !default;
+$shadow-gray: #ccc !default;
