--- a/src/app/components/pies/pie-details/pie-details.component.scss
+++ b/src/app/components/pies/pie-details/pie-details.component.scss
@@ -25,7 +25,7 @@
         margin: .5rem 0px 1rem 0px;
 
         &:hover {
-            color: $light_orange;
+            color: $light-orange;
             transition: 0.3s ease-in-out;
         }
     }
