--- a/src/app/scss/base/_base.scss
+++ b/src/app/scss/base/_base.scss
@@ -1,6 +1,10 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: IBM Plex Sans; font-weight: 400; }
 
+body.locked {
+    overflow: hidden;
+}
+
 .container {
     max-width: 1200px;
     margin: 0px auto; // centering
