fix popup bugs with scaling and scrolling

--- a/src/app/shared/popup/popup.component.scss
+++ b/src/app/shared/popup/popup.component.scss
@@ -29,7 +29,7 @@
     &__content {
         background-color: white;
         color: #000;
-        max-width: 500px;
+        width: 500px;
         padding: 1.875rem;
         z-index: 5;
     }
