--- a/src/app/components/pies/order-pie/order-pie.component.scss
+++ b/src/app/components/pies/order-pie/order-pie.component.scss
@@ -1,5 +1,53 @@
 @import 'abstracts/variables';
 
+.preview-details {
+	&__row { 
+        display: flex;
+        flex-direction: row;
+
+        border: 1px solid #111;
+
+        padding: 0.75rem 1rem;
+        margin: 1rem 0.75rem;
+        margin-top: -1rem;
+    }
+
+	&__image { 
+        height: 100px;
+        width: 100px;
+        overflow: none;
+
+        img {
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+        }
+    }
+
+	&__body { 
+        display: flex;
+        flex-direction: column;
+        font-size: .95rem;
+        font-weight: 500;
+        line-height: 1.25rem;
+
+        margin-left: 0.75rem;
+    }
+
+    &__sublines {
+        flex: 1 1 auto;
+    }
+
+    &__lable {
+        font-weight: 600;
+    }
+
+    &__total-line {
+        color: $light-orange;
+        font-weight: 600;
+    }
+}
+
 .form {
     &__input {
         width: 100%;
